Refactor of CourseService with GetUserCoursesUseCase with his tests and javadoc; Some changes for running the app correctly